--- a/src/Card.css
+++ b/src/Card.css
@@ -3,9 +3,9 @@
 /* TODO: When card is clicked display hidden-options = a box with a radio form for attendance */
 /* TODO: When an option is selected it will change the background color of the student box */
 
-.attendance-box {
-    width: 180px;
-    height: 100px;
+.front-card {
+    width: 400px;
+    height: 500px;
 
     background-color: gray;
     border: 3px solid rgb(61, 61, 61);
@@ -19,7 +19,16 @@ p {
     font-weight: 700;
 }
 
-.hidden-options {
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 5vh;
+    padding-bottom: 10vh;
+}
+
+
+.back-card {
     display: none;
     height: 300px;
     width: 200px;
@@ -27,3 +36,4 @@ p {
     background-color:tan;
 
 }
+
