--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,17 @@
 }
 
 main {
+  height: 100vh;
   background: black;
   /* background-image: linear-gradient( 109.6deg,  rgba(36,45,57,1) 11.2%, rgba(16,37,60,1) 51.2%, rgba(0,0,0,1) 98.6% ); */
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  padding: 20px;
 }
 
 
