--- a/src/Card.css
+++ b/src/Card.css
@@ -3,13 +3,25 @@
 /* TODO: When card is clicked display hidden-options = a box with a radio form for attendance */
 /* TODO: When an option is selected it will change the background color of the student box */
 
+
+.selected-card {
+    height: 55vh;
+    background-color: gray;
+}
+
+h1 {
+    margin: 0;
+}
+
+
 .card {
-    width: 400px;
-    height: 500px;
+
+    height: 100px;
+    width: 100px;
 
     background-color: gray;
-    /* border: 3px solid rgb(5, 5, 5); */
-    margin: 10px;
+    border: 3px solid rgb(5, 5, 5);
+    margin: 1px;
 
     border-radius: 1em;
     border: .15em solid white;
@@ -22,16 +34,8 @@
 
 }
 
-.front {
-    display: none;
-    
-}
 
 
-.back {
-    
-
-}
 
 p {
     color: white;
@@ -39,13 +43,6 @@ p {
     font-weight: 700;
 }
 
-.card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-top: 5vh;
-    padding-bottom: 10vh;
-}
 
 .film-area ul {
     padding: 0 0 0 0;
