--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 main {
   height: 100vh;
-  background: black;
+  background: no-repeat center url(star-wars-backgrounds-14_856985d9.jpeg)
   /* background-image: linear-gradient( 109.6deg,  rgba(36,45,57,1) 11.2%, rgba(16,37,60,1) 51.2%, rgba(0,0,0,1) 98.6% ); */
 }
 
