--- a/src/Card.css
+++ b/src/Card.css
@@ -5,8 +5,14 @@
 
 
 .selected-card {
-    height: 55vh;
-    background-color: gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60vh;
+}
+
+.selected-card h1, h2 {
+    color: yellow;
 }
 
 h1 {
@@ -19,7 +25,6 @@ h1 {
     height: 100px;
     width: 100px;
 
-    background-color: gray;
     border: 3px solid rgb(5, 5, 5);
     margin: 1px;
 
@@ -34,13 +39,25 @@ h1 {
 
 }
 
+.card:hover {
+    border: .15em solid yellow;
+}
 
+.back {
+    width: 300px;
+    height: 400px;
+    padding: 10px;
+
+    border: 0.3rem solid yellow;
+}
 
 
 p {
     color: white;
     text-align: center;
     font-weight: 700;
+    margin-top: 0.7rem;
+    margin-bottom: 0.7rem;
 }
 
 
